--- a/Highorder function example.html
+++ b/Highorder function example.html
@@ -11,10 +11,10 @@ function clickit(){
         alert("the result is: "+result);
     }
     let f2=function(salary, tax){
-        let tax = salary*tax/100;
+        tax = salary*tax/100;
         alert("your tax is: "+tax);
     }
-    dosomething(f2);
+    dosomething(f);
 }
 
 </script>
