--- a/RemoveDuplicates.html
+++ b/RemoveDuplicates.html
@@ -8,7 +8,7 @@
 <script>
 let words=[];
 function checkforduplicates(myword){
-    for(let j=0;j<words.length;j++){
+    for(let j=0;j<=words.length;j++){
         if(words[j]==myword){
             return false;
         }
@@ -27,10 +27,10 @@ function Remove(){
     let newmessage = "";
     
 
-    for(let i=0;i<message.length;i++){
+    for(let i=0;i<=message.length;i++){
         if(message.substring(i,i+1)==" "){
             if (checkforduplicates(word)==true){
-                newmessage += " " + word;
+                newmessage += word+" ";
             }
             word="";
             
